Minor changes in user inteface texts

--- a/app/views/points/show.html.erb
+++ b/app/views/points/show.html.erb
@@ -1,6 +1,6 @@
 
 <% unless @bare_layout %>
-  <h1>Points for <%= @sheetname %> of <%= @course.name %></h1>
+  <h1>Tasks for <%= @sheetname %> of <%= @course.name %></h1>
 <% end %>
 
 <ul>
