--- a/app/views/points/index.html.erb
+++ b/app/views/points/index.html.erb
@@ -1,5 +1,5 @@
 <% unless @bare_layout %>
-  <h1>Summary of points for <%= @course.name %></h1>
+  <h1>Summary of tasks for <%= @course.name %></h1>
 <% end %>
 
 <%
@@ -13,7 +13,7 @@
         <th></th>
         <th>Number of students</th>
         <% if !@summary[:sheets].empty? %>
-          <th colspan="<%= @summary[:sheets].count %>">Total points/possible</th>
+          <th colspan="<%= @summary[:sheets].count %>">Total tasks/possible</th>
         <% end %>
         <% if show_total_column %>
           <th>Total</th>
